[gd_scene load_steps=6 format=3 uid="uid://dx87pme08xv7f"]

[ext_resource type="Script" uid="uid://cwns04dm4s105" path="res://Game Elements/ui/pause_menu.gd" id="1_rk2xr"]
[ext_resource type="StyleBox" uid="uid://bhn7lbt5yrxsl" path="res://Game Elements/ui/resources/6-1_button.tres" id="2_c1md2"]
[ext_resource type="StyleBox" uid="uid://0lsgrq0cdmnb" path="res://Game Elements/ui/resources/6-3_button.tres" id="3_3by6j"]
[ext_resource type="StyleBox" uid="uid://dnekp2864687f" path="res://Game Elements/ui/resources/6-2_button.tres" id="4_7ryux"]
[ext_resource type="PackedScene" uid="uid://bsnhxne2rojuk" path="res://Game Elements/ui/remnant_slot.tscn" id="5_grgga"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rk2xr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -109.0
offset_right = 104.5
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Return" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Settings")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_c1md2")
theme_override_styles/pressed = ExtResource("3_3by6j")
theme_override_styles/hover = ExtResource("4_7ryux")
text = "Return to Game"

[node name="Settings" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Return")
focus_neighbor_bottom = NodePath("../Menu")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_c1md2")
theme_override_styles/pressed = ExtResource("3_3by6j")
theme_override_styles/hover = ExtResource("4_7ryux")
text = "Settings"

[node name="Menu" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Return")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_c1md2")
theme_override_styles/pressed = ExtResource("3_3by6j")
theme_override_styles/hover = ExtResource("4_7ryux")
text = "Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="slots_hbox" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="slot0" parent="Control/MarginContainer/slots_hbox" instance=ExtResource("5_grgga")]
layout_mode = 2

[node name="slot1" parent="Control/MarginContainer/slots_hbox" instance=ExtResource("5_grgga")]
layout_mode = 2

[node name="slot2" parent="Control/MarginContainer/slots_hbox" instance=ExtResource("5_grgga")]
layout_mode = 2

[connection signal="pressed" from="Control/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
